--- a/TailwindBlog.Web/Components/Layout/MainLayout.razor
+++ b/TailwindBlog.Web/Components/Layout/MainLayout.razor
@@ -1,18 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<PageTitle>TailwindBlog</PageTitle>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+<div class="min-h-screen bg-gray-100">
+    <NavMenu />
 
-        <article class="content px-4">
-            @Body
-        </article>
+    <main class="container mx-auto px-4 py-8">
+        @Body
     </main>
 </div>
 
