--- a/TailwindBlog.Web/Components/Layout/MainLayout.razor
+++ b/TailwindBlog.Web/Components/Layout/MainLayout.razor
@@ -1,17 +1,23 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>TailwindBlog</PageTitle>
+<div class="antialiased bg-gray-800 text-gray-100">
 
-<div class="min-h-screen bg-gray-100">
-    <NavMenu />
+	<div class="flex flex-col min-h-screen space-y-4">
 
-    <main class="container mx-auto px-4 py-8">
-        @Body
-    </main>
+		<NavMenuComponent/>
+
+		<main class="container flex-1 max-w-7xl px-4 mx-auto space-y-2 xl:max-w-7xl">
+			@Body
+		</main>
+
+		<FooterComponent/>
+
+	</div>
+
 </div>
 
 <div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+	An unhandled error has occurred.
+	<a href="" class="reload">Reload</a>
+	<a class="dismiss">🗙</a>
 </div>
