--- a/TailwindBlog.Web/Components/_Imports.razor
+++ b/TailwindBlog.Web/Components/_Imports.razor
@@ -1,11 +1,15 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Mapster
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
+@using TailwindBlog.Domain.Helpers
 @using TailwindBlog.Web
 @using TailwindBlog.Web.Components
+@using TailwindBlog.Web.Components.Features.Articles.Models
+@using TailwindBlog.Web.Components.Shared
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
