--- a/TailwindBlog.Web/Components/Shared/RecentRelatedComponent.razor
+++ b/TailwindBlog.Web/Components/Shared/RecentRelatedComponent.razor
@@ -1,25 +1,21 @@
-<h3>
-
-	<div>
-		<div class="text-2xl py-4 font-semibold">Recent Posts</div>
-		<div class="flex flex-col gap-4">
-			<div>
-				<NavLink href="/run-sql-server-on-m1-or-m2-macbook" class="hover:underline hover:text-gray-600">
-					Run SQL Server on M1 or M2 Macbook
-				</NavLink>
-			</div>
-			<div>
-				<NavLink href="/run-sql-server-on-m1-or-m2-macbook" class="hover:underline hover:text-gray-600">
-					Run a Postgres Database for Free on Google Cloud
-				</NavLink>
-			</div>
+<div>
+	<ComponentHeadingComponent HeaderText="Recent Posts" Level="1" TextColorClass="text-gray-50" />
+	<div class="flex flex-col gap-4">
+		<div>
+			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" class="hover:underline hover:text-gray-600">
+				Run SQL Server on M1 or M2 Macbook
+			</NavLink>
+		</div>
+		<div>
+			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" class="hover:underline hover:text-gray-600">
+				Run a Postgres Database for Free on Google Cloud
+			</NavLink>
 		</div>
 	</div>
-
-</h3>
+</div>
 
 @code {
 
-	
+
 
 }
