--- a/TailwindBlog.Web/Components/_Imports.razor
+++ b/TailwindBlog.Web/Components/_Imports.razor
@@ -10,6 +10,7 @@
 @using TailwindBlog.Domain.Helpers
 @using TailwindBlog.Web
 @using TailwindBlog.Web.Components
+@using TailwindBlog.Web.Components.Features.Articles.Components
 @using TailwindBlog.Web.Components.Features.Articles.Models
 @using TailwindBlog.Web.Components.Shared
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
