Refactor ConnectWithUsComponent for improved structure.
Replaced static heading with reusable ComponentHeadingComponent for consistency. Updated external links to remove specific handles for better flexibility and maintainability. Adjusted layout to use a vertical column for improved accessibility and design.

--- a/TailwindBlog.Web/Components/Shared/ConnectWithUsComponent.razor
+++ b/TailwindBlog.Web/Components/Shared/ConnectWithUsComponent.razor
@@ -1,14 +1,14 @@
 <div>
 
-	<div class="text-2xl py-4 font-semibold">Connect with us!</div>
-	<div class="flex gap-4">
-		<NavLink href=@("https://www.threads.net/@scriptbytes") target="_blank">
+	<ComponentHeadingComponent HeaderText="Connect With Us" Level="1" TextColorClass="text-gray-50" />
+	<div class="flex flex-col gap-4">
+		<NavLink href="https://www.threads/" target="_blank">
 			<i class="ri-threads-line text-3xl hover:bg-gray-100 hover:rounded p-2"></i>
 		</NavLink>
-		<NavLink href=@("https://www.instagram.com/scriptbytes") target="_blank">
+		<NavLink href="https://www.instagram.com/" target="_blank">
 			<i class="ri-instagram-line text-3xl"></i>
 		</NavLink>
-		<NavLink href=@("https://www.youtube.com/@scriptbytes") target="_blank">
+		<NavLink href="https://www.youtube.com/" target="_blank">
 			<i class="ri-youtube-line text-3xl"></i>
 		</NavLink>
 	</div>
