--- a/TailwindBlog.Web/Components/Shared/ComponentHeadingComponent.razor
+++ b/TailwindBlog.Web/Components/Shared/ComponentHeadingComponent.razor
@@ -1,34 +1,34 @@
-<header class="mb-6 px-4 py-4">
+<header class="mb-6 py-4">
 
 	@switch (Level)
 	{
 		case "1":
 
-			<h1 class="@($"text-2xl font-bold tracking-tight py-4 {TextColorClass}")">@HeaderText</h1>
+			<h1 class="@($"text-2xl font-semibold tracking-tight py-4 {TextColorClass}")">@HeaderText</h1>
 
 			break;
 
 		case "2":
 
-			<h2 class="@($"text-xl font-bold tracking-tight py-4 {TextColorClass}")">@HeaderText</h2>
+			<h2 class="@($"text-xl font-semibold tracking-tight py-4 {TextColorClass}")">@HeaderText</h2>
 
 			break;
 
 		case "3":
 
-			<h3 class="@($"text-lg font-bold tracking-tight py-4 {TextColorClass}")">@HeaderText</h3>
+			<h3 class="@($"text-lg font-semibold tracking-tight py-4 {TextColorClass}")">@HeaderText</h3>
 
 			break;
 
 		case "4":
 
-			<h4 class="@($"text-md font-bold tracking-tight py-4 {TextColorClass}")">@HeaderText</h4>
+			<h4 class="@($"text-md font-semibold tracking-tight py-4 {TextColorClass}")">@HeaderText</h4>
 
 			break;
 
 		case "5":
 
-			<h5 class="@($"text-sm font-bold tracking-tight py-4 {TextColorClass}")">@HeaderText</h5>
+			<h5 class="@($"text-sm font-semibold tracking-tight py-4 {TextColorClass}")">@HeaderText</h5>
 
 			break;
 	}
