--- a/TailwindBlog.Web/Components/Features/Articles/Components/ArticlesView.razor
+++ b/TailwindBlog.Web/Components/Features/Articles/Components/ArticlesView.razor
@@ -14,17 +14,31 @@
 		{
 			@foreach (var article in _articles)
 			{
-				<div>
+
+				<div class="rounded-2xl shadow-md hover:shadow-blue-500">
 					<article class="md:grid md:grid-cols-1 md:items-baseline">
-						<img class="w-full rounded-xl" src="@article.CoverImageUrl" height="100" alt="@article.Title">
-						<h2 class="font-bold text-xl mb-2 text-gray-800">
-							<a href="@article.UrlSlug" class="text-gray-50 hover:text-blue-500">@article.Title</a>
-						</h2>
-						<p class="text-gray-70 text-base shadow-lg">@article.Introduction</p>
-						<PostInfoComponent Article="@article" CategoryType="Blog"/>
+						<div
+							class="relative isolate flex flex-col items-start rounded-2xl px-4 py-6 hover:bg-blue-500/10">
+							<h2 class="text-base font-semibold tracking-tight text-gray-50">
+								<a href="@article.UrlSlug">
+									<span class="absolute inset-0 z-10"></span>
+									@article.Title
+								</a>
+							</h2>
+
+							<p class="mt-2 text-sm text-gray-50 py-2">
+								@article.Introduction
+							</p>
+
+							<PostInfoComponent Article="@article" CategoryType="Blog"/>
+
+						</div>
+
 					</article>
 				</div>
 			}
+
+		}
 		}
 	</div>
 	<div class="pl-6 pt-12 lg:pt-4">
