--- a/TailwindBlog.Web/Components/_Imports.razor
+++ b/TailwindBlog.Web/Components/_Imports.razor
@@ -7,9 +7,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
+@using TailwindBlog.Domain.Fakes
 @using TailwindBlog.Domain.Helpers
 @using TailwindBlog.Web
 @using TailwindBlog.Web.Components
+@using TailwindBlog.Web.Components.Features.Articles.Components
 @using TailwindBlog.Web.Components.Features.Articles.Components
 @using TailwindBlog.Web.Components.Features.Articles.Models
 @using TailwindBlog.Web.Components.Shared
