--- a/TailwindBlog.Web.Tests.Bunit/_Imports.razor
+++ b/TailwindBlog.Web.Tests.Bunit/_Imports.razor
@@ -1,7 +1,9 @@
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop
-@using Microsoft.Extensions.DependencyInjection
 @using Bunit
 @using Bunit.TestDoubles
-@using Xunit
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.DependencyInjection
+@using Microsoft.JSInterop
 @using TailwindBlog.Web
+@using TailwindBlog.Web.Components
+@using TailwindBlog.Web.Components.Pages
+@using Xunit
