--- a/TailwindBlog.Web/Components/Shared/NotAuthorizedComponent.razor
+++ b/TailwindBlog.Web/Components/Shared/NotAuthorizedComponent.razor
@@ -1,3 +1,7 @@
-﻿<h3 class="text-2xl font-extrabold text-yellow-500">Whoops! You are not authorized for this page. Please login first.</h3>
+﻿<h3 class="text-2xl font-extrabold text-yellow-500">@_messageText</h3>
 
-@code {}
+@code {
+
+	private const string _messageText = "Whoops! You are not authorized for this page. Please login first.";
+
+}
