--- a/TailwindBlog.Web/Components/Pages/Contact.razor
+++ b/TailwindBlog.Web/Components/Pages/Contact.razor
@@ -3,7 +3,7 @@
 <PageHeadingComponent Level="1" HeaderText="Contacts"/>
 
 <div class="prose max-w-2xl mx-auto text-gray-100 bg-gray-800 rounded-md shadow-md p-6 mt-6">
-	<h2 class="text-xl font-bold mb-2">Contact Information</h2>
+	<h2 class="text-xl font-bold mb-2">@_pageTitle</h2>
 	<p>
 		For questions, support, or feedback about <b>TailwindBlog</b>, please use one of the following methods:
 	</p>
@@ -19,5 +19,6 @@
 
 @code {
 
+	private const string _pageTitle = "Contact - TailwindBlog";
 
 }
