refactor: rename project and update namespaces for Web migration

--- a/Web/Components/_Imports.razor
+++ b/Web/Components/_Imports.razor
@@ -8,11 +8,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
-@using TailwindBlog.Domain.Fakes
-@using TailwindBlog.Domain.Helpers
-@using TailwindBlog.Web
-@using TailwindBlog.Web.Components
-@using TailwindBlog.Web.Components.Features.Articles.Components
-@using TailwindBlog.Web.Components.Features.Articles.Models
-@using TailwindBlog.Web.Components.Shared
+@using Domain.Fakes
+@using Domain.Helpers
+@using Web
+@using Web.Components
+@using Web.Components.Features.Articles.Components
+@using Web.Components.Features.Articles.Models
+@using Web.Components.Shared
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
