--- a/Web/Components/Shared/PostInfoComponent.razor
+++ b/Web/Components/Shared/PostInfoComponent.razor
@@ -14,7 +14,7 @@
 		<div>Draft</div>
 	}
 
-	<div>Category: @Article.Category.Name</div>
+	<div>Categories: @Article.Category.Name</div>
 
 	</div>
 
