--- a/Web/Components/_Imports.razor
+++ b/Web/Components/_Imports.razor
@@ -10,6 +10,8 @@
 @using Microsoft.JSInterop
 @using Domain.Fakes
 @using Domain.Helpers
+@using Domain.Interfaces
+@using Domain.Models
 @using Web
 @using Web.Components
 @using Web.Components.Features.Articles.Components
