Remove Articles and Categories-related files
- Deleted `ArticleModel.cs` as it's no longer required.
- Removed `CategoryList.razor` along with its related logic.
- Added `Articles` feature components: `List.razor`, `Edit.razor`, and `Details.razor`.
- Updated `ArticleDto` references across components and removed outdated dependencies.
- Updated `PageHeadingComponent.razor` with an additional `TextColorClass` parameter.
- Integrated `Syncfusion.Blazor` library for improved UI components.
- Updated project file to include necessary Syncfusion and MongoDb dependencies.
- Cleaned up unused folders and updated namespaces for clarity.

--- a/Web/Components/App.razor
+++ b/Web/Components/App.razor
@@ -8,6 +8,8 @@
 	<base href="/"/>
 	<link rel="stylesheet" href="@Assets["css/app.css"]"/>
 	<link rel="stylesheet" href="@Assets["Web.styles.css"]"/>
+	<link rel="stylesheet" href="_content/Syncfusion.Blazor.Themes/tailwind.css"/>"/>
+
 	<ImportMap/>
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<HeadOutlet/>
@@ -15,7 +17,10 @@
 
 <body>
 <Routes/>
+
 <script src="_framework/blazor.web.js"></script>
+<script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+
 </body>
 
 </html>
