--- a/Web/Components/Shared/PostInfoComponent.razor
+++ b/Web/Components/Shared/PostInfoComponent.razor
@@ -19,6 +19,6 @@
 
 @code {
 
-	[Parameter] public ArticleModel Article { get; set; } = new();
+	[Parameter] public ArticleDto Article { get; set; } = new();
 
 }
