--- a/Web/Components/Shared/RecentRelatedComponent.razor
+++ b/Web/Components/Shared/RecentRelatedComponent.razor
@@ -2,14 +2,12 @@
 	<ComponentHeadingComponent HeaderText="@_headerText" Level="1" TextColorClass="text-gray-50" />
 	<div class="flex flex-col gap-4">
 		<div>
-			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" target="_blank" 
-			         class="hover:text-blue-700">
+			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" target="_blank" class="hover:text-blue-700">
 				Run SQL Server on M1 or M2 Macbook
 			</NavLink>
 		</div>
 		<div>
-			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" target="_blank"  
-			         class="hover:text-blue-700">
+			<NavLink href="/run-sql-server-on-m1-or-m2-macbook" target="_blank" class="hover:text-blue-700">
 				Run a Postgres Database for Free on Google Cloud
 			</NavLink>
 		</div>
