--- a/Web/Components/_Imports.razor
+++ b/Web/Components/_Imports.razor
@@ -14,7 +14,11 @@
 @using Domain.Models
 @using Web
 @using Web.Components
-@using Web.Components.Features.Articles.Components
-@using Web.Components.Features.Articles.Models
+@using Web.Components.Features.Articles
+@using Web.Components.Features.Categories
 @using Web.Components.Shared
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.DropDowns
