--- a/Web/Components/Features/Articles/ArticlesView.razor
+++ b/Web/Components/Features/Articles/ArticlesView.razor
@@ -1,4 +1,4 @@
-@page "/articles"
+@page "/myarticles"
 
 <div class="grid grid-cols-1 lg:grid-cols-3 mt-6">
 	<div class="lg:col-span-2 text-gray-60 bg-gray-800">
@@ -49,7 +49,7 @@
 
 @code {
 
-	private readonly List<ArticleModel>? _articles = [];
+	private readonly List<ArticleDto>? _articles = [];
 
 	protected override void OnInitialized()
 	{
@@ -57,8 +57,8 @@
 		for (int i = 0; i < 3; i++)
 		{
 			var article = FakeArticle.GetNewArticle();
-			var articleModel = article.Adapt<ArticleModel>();
-			_articles?.Add(articleModel);
+			var articleDto = article.Adapt<ArticleDto>();
+			_articles?.Add(articleDto);
 		}
 
 	}
