--- a/Web/Components/Features/Categories/Details.razor
+++ b/Web/Components/Features/Categories/Details.razor
@@ -34,8 +34,8 @@
 			<div class="p-6">
 				<dl class="grid grid-cols-1 gap-x-4 gap-y-6 sm:grid-cols-2">
 					<div class="sm:col-span-2">
-						<dt class="text-sm font-medium text-gray-500">Description</dt>
-						<dd class="mt-1 text-gray-900">@_category.Description</dd>
+						<dt class="text-sm font-medium text-gray-500">Slug</dt>
+						<dd class="mt-1 text-gray-900">@_category.Slug</dd>
 					</div>
 					<div>
 						<dt class="text-sm font-medium text-gray-500">Created On</dt>
