--- a/Web/Components/Pages/Error.razor
+++ b/Web/Components/Pages/Error.razor
@@ -1,9 +1,8 @@
 ﻿@page "/Error"
 @using System.Diagnostics
 
-<PageTitle>Error</PageTitle>
+<PageHeadingComponent Level="1" HeaderText="Error" TextColorClass="text-danger"/>
 
-<h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (ShowRequestId)
