--- a/Web/Components/Shared/PageHeadingComponent.razor
+++ b/Web/Components/Shared/PageHeadingComponent.razor
@@ -10,19 +10,19 @@
 		{
 			case "1":
 
-				<h1 class="text-3xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h1>
+				<h1 class=@($"text-3xl font-bold tracking-tight py-4 {TextColorClass}")>@HeaderText</h1>
 
 				break;
 
 			case "2":
 
-				<h2 class="text-2xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h2>
+				<h2 class=@($"text-2xl font-bold tracking-tight py-4 {TextColorClass}")>@HeaderText</h2>
 
 				break;
 
 			case "3":
 
-				<h3 class="text-1xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h3>
+				<h3 class=@($"text-1xl font-bold tracking-tight py-4 {TextColorClass}")>@HeaderText</h3>
 
 				break;
 		}
@@ -34,5 +34,7 @@
 	[Parameter] public string HeaderText { get; set; } = "My Blog";
 
 	[Parameter] public string Level { get; set; } = "1";
+
+	[Parameter] public string TextColorClass { get; set; } = "text-gray-50";
 
 }
